apps/calico-policy-demo/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calico-demo-server
  labels:
    app.kubernetes.io/part-of: calico-policy-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: calico-demo-client
  labels:
    app.kubernetes.io/part-of: calico-policy-demo
    policy-test/client: "true"
