apps/calico-policy-demo/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: calico-demo-server
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/part-of: calico-policy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo
        app.kubernetes.io/part-of: calico-policy-demo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - -listen=:8080
            - -text=calico-policy-demo
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: calico-demo-server
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/part-of: calico-policy-demo
spec:
  selector:
    app.kubernetes.io/name: echo
  ports:
    - name: http
      port: 8080
      targetPort: http
